test/sema/positive/methods6.impala
trait T[B] {
    fn conv(self: Self) -> B;
}

fn f[C: T[C]](c: C) -> C {
   c.conv().conv()
}
