test/sema/negative/super_traits4.impala
trait T[B] {
    fn f(self: Self) ->	B;
}
trait U : T {}
